--- a/templates/client.hcl.j2
+++ b/templates/client.hcl.j2
@@ -86,7 +86,7 @@ client {
     {%- endfor %}
     {%- endmacro %}
 
-    {%- if nomad_template_config %}
+    {%- if nomad_template_config is defined %}
     template {
     {{- template_config(nomad_template_config) | replace('\'', '\"') -}}
     }
