--- a/templates/client.hcl.j2
+++ b/templates/client.hcl.j2
@@ -86,9 +86,9 @@ client {
     {% endfor %}
     {% endmacro %}
 
-    {% if nomad_template_config is defined %}
+    {% if nomad_template_config|length >0 %}
     template {
-    {{ template_config(nomad_template_config) | replace('\'', '\"') -}}
+    {{ template_config(nomad_template_config) | replace('\'', '\"') }}
     }
     {% endif %}
 }
